# halo2-semaphore

./: Cargo.toml
src/: gadget.rs  main.rs  utils.rs
src/gadget/: merkle.rs  poseidon.rs
src/gadget/merkle/: chip.rs
src/gadget/poseidon/: pow5t3.rs
src/primitives/: poseidon.rs
src/primitives/poseidon/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs
