[package]
name = "halo2-semaphore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitvec = "0.22"
# pasta_curves = "0.2.1"
# halo2 = "0.1.0-beta.1"
halo2_proofs = "0.2.0"
halo2_gadgets = "0.2.0"
group = "0.12"
